<resources>
    <string name="app_name">Mvvm Structure</string>

    <!--Label Text-->
    <string name="label_open_gallery">Open Gallery</string>
    <string name="label_open_camera">Open Camera</string>

    <!--Button Text-->
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_undo">Undo</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_settings">Settings</string>
    <string name="button_try_again">Try Again</string>
    <string name="button_refresh">Refresh</string>
    <string name="button_turn_on_internet_connectivity">Turn on internet connectivity</string>

    <!--Messages Text-->
    <string name="no_internet_title">No Internet Available</string>
    <string name="no_record_found">No Record Found</string>
    <string name="server_error_title">Something went wrong</string>
    <string name="no_internet_message">Make sure that mobile data or Wi-Fi is turn on, then try again</string>
    <string name="rationale_camera">This app needs access to your camera to capture and save images</string>
    <string name="rationale_gallery">This app needs access to your gallery to pick images</string>
    <string name="alert_error_selecting_image">Error selecting the image, please try again.</string>
    <string name="alert_message_error">Something went wrong please try after sometime.</string>
    <string name="action_ok">Ok</string>
    <string name="lbl_get_otp">Get OTP</string>
    <string name="lbl_enter_number">Enter Your \nPhone Number</string>
    <string name="lbl_enter_otp">Enter The \nOTP</string>
    <string name="lbl_continue">Continue</string>
    <string name="lbl_resend_otp">Resend OTP</string>
    <string name="lbl_country_code">+1</string>
    <string name="lbl_select_country_code">Select Country Code</string>
    <string name="lbl_enter_mobile_number">Enter Mobile number</string>
    <string name="lbl_enter_valid_mobile_number">Enter Valid Mobile number</string>
    <string name="lbl_enter_valid_otp">Enter Valid OTP</string>
    <string name="lbl_user_enter_otp">Enter OTP</string>
    <string name="lbl_notes">Notes</string>
    <string name="lbl_personal_messages_to_you">Personal messages to you</string>
    <string name="lbl_profile">Profile</string>
    <string name="lbl_matches">Matches</string>
    <string name="lbl_discover">Discover</string>
    <string name="lbl_interested_in_you">Interested In You    </string>
    <string name="lbl_premium_members_can_view_all_their_likes_at_once">Premium members can view all their likes at once</string>
    <string name="lbl_upgrade">Upgrade</string>
    <string name="lbl_tap_to_review_50_notes">Tap to review 50+ notes</string>
</resources>
